Picture shadow, menu flickering:: Fixing footer

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 *{
     box-sizing: border-box;
 }
-
+/* ---------------------------------------------- */
 /* Fonts */
 .content-heading, .dropdown{
     font-family: 'Montserrat', sans-serif;
@@ -24,7 +24,6 @@ html, body {
     text-align: left;
     position: relative;
   }
-
 .wrapper{
     background: linear-gradient(
         to bottom, 
@@ -34,6 +33,8 @@ html, body {
         #D5D5D5 100%
       );
 }
+/* ---------------------------------------------- */
+
 
 /* COLOR HEADINGS and p */
 /* ---------------------------------------------- */
@@ -56,7 +57,6 @@ h1, h5, .footer-text, nav, a{
     display: inline-block;
     top: -0.8px;
 }
-
 /* Change visuals in all the elements inside dropdown */
 .dropdown * {
     width: 100%;
@@ -65,10 +65,16 @@ h1, h5, .footer-text, nav, a{
     border-bottom: 0.5px solid white;
     cursor: pointer;
 }
+/* ---------------------------------------------- */
+
+
+
+/* Button "Menu" */
+/* ---------------------------------------------- */
 .dropbtn{
     border: 1px solid white;
 }
-
+/* Content dropdown */
 .dropbtn, a{
     padding: 12px 16px;
 }
@@ -95,6 +101,8 @@ h1, h5, .footer-text, nav, a{
     color: white;
 }
 .dropdown a:nth-child(1):hover{
+    /* Equalizing stop the flickering, from box 1 to 2 */
+    margin-top: -1px;
     border-top: 1px solid #6D7993;
 }
 /* Color change on dropdown button when content is shown */
@@ -103,11 +111,7 @@ h1, h5, .footer-text, nav, a{
     color: #6D7993;
     border: none;
 }
-
-
-
-
-
+/* ---------------------------------------------- */
 
 
 /* CONTAINER CONTENT */
@@ -124,6 +128,7 @@ h1, h5, .footer-text, nav, a{
 .main-photo{
     width: 140px;
     height: 200px;
+    box-shadow: 2px 2px 10px 1px black;
 }
 .container-information{
 
